# knowbe4-scripts

./: .gitignore  README.md  knowbe4.template.json  pyproject.toml
queries/: accountShow.graphql  accountUpdate.graphql  account_info.graphql  get_accounts.graphql  introspect.graphql  partnerAdminCreate.graphql  partnerAdmins.graphql  schema.graphql  signInAsPartner.graphql  userGrantAdmin.graphql  users.graphql
scripts/: report.sh
src/: api.py  feature_scraping.py  report.py  utils.py
templates/: knowbe4_report.md
