[tool.poetry]
name = "knowbe4-scripts"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.4.1"
requests-toolbelt = "^1.0.0"
jinja2 = "^3.1.2"
openpyxl = "^3.1.2"
googleapiutils2 = "^0.9.4"
pandas = "^2.0.2"
requests = "^2.31.0"
jinja2-markdown = "^0.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
