[tool.poetry]
name = "knowbe4-scripts"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.5.0"
requests-toolbelt = "^1.0.0"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
requests = "^2.31.0"
jinja2-markdown = "^0.0.3"
googleapiutils2 = "^0.14.0"
jinja-markdown2 = "^0.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = "^24.3.0"
types-requests = "^2.31.0.20240406"
types-cachetools = "^5.3.0.7"
pandas-stubs = "^2.2.1.240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
